# osakana

./: .gitignore  LICENSE  README.md  build.sh  osakana.spec  pyproject.toml
.github/: dependabot.yml
.github/workflows/: build.yml  release.yml
src/: main.py
src/core/: _license.py  binary_manager.py  config.py  downloader.py  platform_detector.py  updater.py
src/gui/: download_tab.py  main_window.py  queue_widget.py  settings_tab.py  setup_wizard.py  style.py  trim_widget.py
