[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "osakana"
version = "0.0.2"
description = "A GUI client for yt-dlp"
requires-python = ">=3.10"
dependencies = [
    "PyQt6>=6.6.0",
    "requests>=2.31.0",
]

[tool.setuptools.packages.find]
where = ["src"]
