[build-system]
requires = ["setuptools>=82.0.1", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "osakana"
version = "0.0.5"
description = "A GUI client for yt-dlp"
requires-python = ">=3.10"
license = { text = "MIT" }
dependencies = [
    "PySide6>=6.6.0",
    "requests>=2.31.0",
]

[tool.setuptools.packages.find]
where = ["src"]
